[gd_scene load_steps=5 format=3 uid="uid://cadxqi8xqbxnb"]

[ext_resource type="Script" uid="uid://dn4xwgd31qoge" path="res://Scripts/enemy_ai.gd" id="1_cshhr"]
[ext_resource type="PackedScene" uid="uid://qmu48ruyraf0" path="res://Assets/Models/Alpaking.glb" id="2_wacs0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_r1vdb"]
radius = 0.8952637
height = 2.2375488

[sub_resource type="SphereShape3D" id="SphereShape3D_quc66"]
radius = 33.0

[node name="TestEnemy" type="CharacterBody3D" groups=["Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_cshhr")

[node name="EnemyCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1.1120633, 0, 0.1268835, -0.111703515)
shape = SubResource("CapsuleShape3D_r1vdb")

[node name="NavAgent" type="NavigationAgent3D" parent="."]

[node name="DetectionArea" type="Area3D" parent="."]

[node name="DetectionCollider" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("SphereShape3D_quc66")

[node name="EnemyMesh" parent="." instance=ExtResource("2_wacs0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.1354306, 0)
